--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -1,22 +1,23 @@
 [build]
-  command = "pip install -r netlify/functions/requirements.txt"
+  command = "pip install -r netlify/functions/requirements.txt -t netlify/functions/"
   functions = "netlify/functions"
   publish = "frontend/public"
 
 [functions]
-  external_node_modules = ["flask", "faunadb"]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+[functions.api]
+  included_files = ["netlify/functions/**"]
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
 
 [[redirects]]
-  from = "/l/*"
-  to = "/.netlify/functions/api/l/:splat"
+  from = "/.netlify/functions/api/*"
+  to = "/.netlify/functions/api/:splat"
   status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200 
+  force = true 
