--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,9 +1,24 @@
-.env
+# Python
 __pycache__/
-*.pyc
-.netlify
-node_modules/
-.vscode/
-.DS_Store
-*.log
-data/ 
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Netlify
+.netlify 
